# plugmini

./: .gitignore  LICENSE  README.md  hello.py  plugmini.py  pyproject.toml  setup.py
plugmini/: __init__.py  main.py  plugmini.py  plugmini_ble.py
